updated patient Controller and view

--- a/app/views/patientsView.twig
+++ b/app/views/patientsView.twig
@@ -33,7 +33,7 @@
             <td id={{id}} class="crosshair" name="notes">{{notes}}</td>
             <td id={{id}} class="" name="doctor">{{doctor}}</td>
             <td id={{id}} class="" name="office">{{office}}</td>
-            <td id={{id}} class="crosshair" name="patientId" >{{patientID}}</td>
+            <td id={{id}} class="" name="patientId" >{{patientID}}</td>
             <td id={{id}} class="" name="familyId" >{{familyId}}</td>
             <td id={{id}} class="crosshair" name="familyIndividualId" >{{familyIndividualId }}</td>
             <td id={{id}} class="crosshair" name="fatherId">{{fatherId}}</td>
@@ -188,10 +188,10 @@
                                     <td class="crosshair" name="notes">{{item.notes}}</td>
                                     <td class="" name="doctor">{{item.doctor}}</td>
                                     <td class="" name="office">{{item.office}}</td>
-                                    <td class="crosshair" name="patientId" >{{item.patientId}}</td>
+                                    <td class="" name="patientId" >{{item.patientId}}</td>
 
-                                    <td class="crosshair" name="familyId" >{{item.familyId}}</td>
-                                    <td          name="familyIndividualId" >{{ item.familyIndividualId}}</td>
+                                    <td class="" name="familyId" >{{item.familyId}}</td>
+                                    <td class="" name="familyIndividualId" >{{ item.familyIndividualId}}</td>
                                     <td class="crosshair" name="fatherId">{{item.fatherId}}</td>
                                     <td class="crosshair" name="motherId">{{item.motherId}}</td>
                                     <td class="" name="created">{{item.created}}</td>
