--- a/app/views/patientsView.twig
+++ b/app/views/patientsView.twig
@@ -223,7 +223,9 @@
                             <span><button style="margin-right:10px; color:#428bca; margin-top:-1px" class="btn btn-sm btn-default" />Generate Pnumber</span>
                         </form>
                     </ul>
+                    <div id="paginationInfo"></div>
                 </div>
+
             </div> <!--md-4 90%-->
             <div class="col-md-4" style="width:1%"></div>
         </div> <!--row-->
