--- a/app/views/patientsView.twig
+++ b/app/views/patientsView.twig
@@ -68,6 +68,8 @@
                                     <option value="25">25</option>
                                     <option value="50">50</option>
                                     <option value="100">100</option>
+                                    <option value="250">250</option>
+                                    <option value="500">500</option>
                                 </select> entries
                             </label>
                         </div>
@@ -83,7 +85,7 @@
                         <table id="individualsTable" class="table table-hover dataTable table-bordered tablesorter" cellspacing="0"  style="margin-top:5px;width:100%">
                             <thead>
                                 <tr>
-                                    <th id="checkbox" style="width:10px!important;"><input id="all" type="checkbox" /></th>
+                                    <th id="checkbox" style="width:10px!important;"><input id="all" type="checkbox" onclick="activateTableSelections();return 0;"/></th>
                                     <th class="sorting" name="id" >id</th>
                                     <th class="sorting" name="referralDate" >referral date</th>
                                     <th class="sorting" name="referralComments" >referral comments</th>
@@ -125,7 +127,7 @@
                             <tfoot>
                                 <tr>
                                 <tr>
-                                    <th id="checkbox" style="width:10px!important;"><input id="all" type="checkbox" /></th>
+                                    <th></th>
                                     <th class="sorting" name="id" >id</th>
                                     <th class="sorting" name="referralDate" >referral date</th>
                                     <th class="sorting" name="referralComments" >referral comments</th>
@@ -229,7 +231,7 @@
                     <ul class="export" style="margin:0px; float:left; margin-top: 7px; padding-left: 15px;">
                         <form action="generatePnumber" method="post">
                             <input type="hidden" id="submitAddExtractSampleIds" name="patientIds_" value="" />
-                            <span><button style="margin-right:10px; color:#428bca; margin-top:-1px" class="btn btn-sm btn-default" />Generate Pnumber</span>
+                            <span><button style="margin-right:10px; color:#428bca; margin-top:-1px" class="btn btn-sm btn-default" />Generate P# (sample id)</span>
                         </form>
                     </ul>
                     <div id="paginationInfo"></div>
