--- a/app/views/familyView.twig
+++ b/app/views/familyView.twig
@@ -5,13 +5,12 @@
 
 
     <script id="individualsTable-template" type="text/x-handlebars-template">
+
         {% verbatim %}
         <td id={{id}}                   name="id" >{{id}}</td>
         <td id={{id}} class="crosshair" name="doctorId" >{{doctorId}}</td>
-
-
-
         {% endverbatim %}
+
     </script>
 
 
@@ -19,36 +18,8 @@
 
 
 
-{% block main %}
-    <div class="container" style="width:100%">
-        <div class="row" style="width:100%">
-            <div class="col-md-4" style="width:5%"></div>
-            <div class="col-md-4" style="width:90%">
+{% block table %}
 
-                <div style="text-align:center; background-color: #00ff00; color:#000066">{{ flash['success'] }}</div></br>
-
-                <div id="Table_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
-
-                    <div class="col-xs-6">
-                        <div class="dataTables_length" id="tableLength">
-                            <label>Show
-                                <select name="tableLength" id="tableLength" aria-controls="isolatesTable" class="form-control input-sm">
-                                    <option value="10">10</option>
-                                    <option value="25">25</option>
-                                    <option value="50">50</option>
-                                    <option value="100">100</option>
-                                </select> entries
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-xs-6">
-                        <div id="dataTables_filter" class="dataTables_filter">
-                            <label>Quick Search:<input type="search" role="search" id="quickSearch" class="form-control input-sm" placeholder="" aria-controls="isolatesTable" ><i class="fa fa-search fa-3" id="faAvancedSearch"></i>
-                            </label>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12" id="table" style="margin:0px;"> <!--Luis-->
                         <form action='doctor' method='post'>
                             <table id="familyTable" class="table table-hover dataTable table-bordered tablesorter" cellspacing="0"  style="margin-top:5px;width:100%">
                                 <thead>
@@ -81,43 +52,15 @@
                                 </tbody>
                             </table>
                         </form>
-                    </div> <!--table-->
-                    <!--<button type="button" class="btn btn-primary" style="float:right" onClick="window.location.replace(&quot;/isolatesFull&quot;)">Show all data fields</button>-->
 
+{% endblock %}
 
-                </div> <!--wrapper-->
-                <div class="col-xs-12 paginationWrapper" style="padding-left:15px">
-                    <!--javascript will set pagination here -->
-                    <ul class="pagination" id="pagination" style="margin:5px; float:left; font-size:12px">
-                    </ul>
-                    <ul class="export" style="margin:0px; float:left; margin-top: 7px; padding-left: 15px;">
-                        <div>
-                            <div style="float:left">
-                                <form action="exportIsolates" method="post">
-                                    <input type="hidden" id="submitExportSampleIds" name="sampleIds_" value="" />
-                                    <span><button style="margin-right:10px; color:#428bca; margin-top:-1px" id="ExportIsolatesButton" class="btn btn-sm btn-default" />Export all</span>
-                                </form>
-                            </div>
-                            <div style="float:right">
+{% block customButtons %}
                                 <span><button style="color:#428bca;  margin-top:-1px" id = "addDoctor" name="addFamily" class="btn btn-sm btn-default" onclick="addFamilyRow()" />Add family</span>
                                 <span><button type="submit" style=" display:none; color:#428bca;  margin-top:-1px" id ="submitFamily" name="submitDoctor" class="btn btn-sm btn-default" onclick = "submitForm()" />Submit</span>
-
-                            </div>
-                        </div>
-                    </ul>
-                </div>
-            </div> <!--md-4 90%-->
-            <div class="col-md-4" style="width:5%"></div>
-        </div> <!--row-->
-    </div> <!--container-->
-
-
-
 {% endblock %}
 
 {% block scripts %}
     {{ parent() }}
-
-    <script src="public/assets/js/pagination.js"></script>
     <script src="public/assets/js/family.js"></script>
 {% endblock %}
